@@ -10,6 +10,9 @@
 
 === Bug fixes
 
+- https://github.com/eclipse-syson/syson/issues/1698[#1698] [explorer] Discard non-`Namespace` elements to compute whether a model is a user library.
+This fix ensure that imported models containing, for example, a top-level `LibraryPackage` and a top-level `Comment` is correctly displayed under the _User libraries_ directory.
+
 === Improvements
 
 - https://github.com/eclipse-syson/syson/issues/1666[#1666] [export] Export `SatisfyRequirementUsage` in textual format.
